sample/retrieveUnpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Article Feedback</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ongoing</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint Case</fullName>
        <description>Status options shown for complaints</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ongoing</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Referred internally</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ongoing</fullName>
        </values>
        <values>
            <fullName>Referred internally</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payment Plan Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ongoing</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Access_to_Meter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meter Accessible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Available</description>
        <label>Address Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adhoc_First_Payment_Amount__c</fullName>
        <label>First Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adhoc_First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adhoc_Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adhoc_Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adhoc_Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adhoc_Regular_Payment_Amount__c</fullName>
        <label>Regular Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adhoc_Second_Payment_Amount__c</fullName>
        <label>Second Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adhoc_Second_Payment_Date__c</fullName>
        <label>Second Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Bill_Sent__c</fullName>
        <label>Adjusted Bill Sent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agent_Address_1__c</fullName>
        <inlineHelpText>For integration</inlineHelpText>
        <label>Agent Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Address_2__c</fullName>
        <inlineHelpText>For integration</inlineHelpText>
        <label>Agent Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Address_Line_1__c</fullName>
        <formula>If( ISPICKVAL(Letter_to_Agent__c,&quot;Yes&quot;)&amp;&amp; isblank(Agent__r.BillingStreet),&quot;Mailing Street Address Missing&quot;, Agent__r.BillingStreet)</formula>
        <label>Agent Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Address_Line_2__c</fullName>
        <formula>Agent__r.BillingCity &amp;&quot;  &quot;&amp; Agent__r.BillingState &amp;&quot;  &quot;&amp; Agent__r.BillingPostalCode</formula>
        <label>Agent Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <inlineHelpText>For integration</inlineHelpText>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Flag__c</fullName>
        <formula>IF( isblank(Alerts_Int__c) , 
  IF(AND(Recycled_Water_Available__c = &apos;Available&apos;, 
Record_Type_Name__c  = &apos;Information Statement Update&apos;), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;na&quot;,20,16), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;na&quot;,20,16)),Image(&quot;/img/samples/flag_red.gif&quot;,&quot;na&quot;,30,24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerts_Int_Long__c</fullName>
        <label>Alerts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alerts_Int__c</fullName>
        <description>linked to formula field that displays a flag on main layout
DO NOT USE - use Alerts_Int_Long__c instead
(only used in one code in CaseUtil)</description>
        <label>(HIDDEN) Alerts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amend_Read_Used__c</fullName>
        <label>Amend Read Used</label>
        <picklist>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-billed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Settled__c</fullName>
        <label>Amount Settled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Date__c</fullName>
        <label>Applicable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Result_Reason__c</fullName>
        <label>Application Result Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Result__c</fullName>
        <label>Application Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved - Usage &amp; SDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - SDC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_type__c</fullName>
        <label>Application type</label>
        <picklist>
            <picklistValues>
                <fullName>Leak Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unexplained Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrears__c</fullName>
        <description>Arrears</description>
        <label>Arrears</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Details__c</fullName>
        <label>Asset Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention_Of__c</fullName>
        <description>Attention Of</description>
        <label>Attention Of</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authority_to_Transact__c</fullName>
        <label>Authority to Transact?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BNSM_ADC_Manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BNSM/ADC Manual Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Balance__c</fullName>
        <formula>Billing_Account__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number_Check_Digit__c</fullName>
        <formula>Billing_Account__r.HiAF_Account_Number_Check_Digit__c</formula>
        <label>Billing Account Number Check Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Property_Address__c</fullName>
        <formula>Billing_Account__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Account Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account_SMR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has the property filter on and will be displayed only on SMR page.</description>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Cases (Billing Account)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address_SMR__c</fullName>
        <formula>Billing_Account_SMR__r.Account_Address__c</formula>
        <label>Current Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bills_Over_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Bills Over Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Trade_Waste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Cancel Trade Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_left__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card left?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <inlineHelpText>What is the case or activity about?</inlineHelpText>
        <label>What</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Account Payments &amp; Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <inlineHelpText>Why is the case or activity occurring?</inlineHelpText>
        <label>Why</label>
        <picklist>
            <controllingField>Category_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Account/Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns &amp; Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Recovery Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency Programs &amp; Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Explanation of Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Issues - Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Statement Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Readings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In / Move Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Customer/Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Off/On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tappings/Pluggings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_3__c</fullName>
        <inlineHelpText>The solution, the response, the process - the case creation</inlineHelpText>
        <label>How</label>
        <picklist>
            <controllingField>Category_Level_2__c</controllingField>
            <picklistValues>
                <fullName>Acceptance of Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Balance/Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Amend Concession Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc Billing Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Meter Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Property Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog Sewer Charges Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy and  Liquidations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build overs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Opt In/Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caveat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Occupier Explained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check for Tampering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent to connect Water or Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Classifaction Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Read Taken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caveat_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caveat Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Experience Surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWOV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concession_Allowances__c</fullName>
        <label>Concession Allowances</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concession_Card_Firstname__c</fullName>
        <label>Concession Card Firstname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Card_Lastname__c</fullName>
        <label>Concession Card Lastname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Card_Number__c</fullName>
        <label>Concession Card Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Card_Type__c</fullName>
        <label>Concession Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>DVA - Gold Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVA - Pensioner Concession Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensioner Concession Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Contact_Point__c</fullName>
        <label>Concession Contact Point</label>
        <picklist>
            <picklistValues>
                <fullName>COUNTER VISIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-MAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LETTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENSION REBATE APPL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Customer_Type__c</fullName>
        <label>Concession Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Life Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupant of property that is the Estate of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property occupier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Details_Confirmed__c</fullName>
        <label>Concession details confirmed?</label>
        <picklist>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing concession details correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New concession details required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Evidence__c</fullName>
        <label>Concession Evidence</label>
        <picklist>
            <picklistValues>
                <fullName>Copy of private agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease/Rental agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from retirement village</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Holder__c</fullName>
        <label>Concession Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Account Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Holder Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirmation_Type__c</fullName>
        <description>picklist to determine what channel of confirmation to send the customer.</description>
        <label>Confirmation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connection_Or_Disconnection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(HIDDEN) Connection Or Disconnection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <inlineHelpText>Document the contact Name and contact information here. If the contact is an existing person against the Customer record, then select it using the lookup below</inlineHelpText>
        <label>Contact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOS - Aquis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOS - Dispos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Mode__c</fullName>
        <label>Contact Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Outcome__c</fullName>
        <label>Contact Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Contact made with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact made with 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact willing to talk to office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contact made</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <inlineHelpText>For Person that is not in system and no need to record in system.</inlineHelpText>
        <label>Contact Person Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>